WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15719
[Transforms] Transformed box doesn't repaint when translation changes
https://bugs.webkit.org/show_bug.cgi?id=15719
Summary
[Transforms] Transformed box doesn't repaint when translation changes
mitz
Reported
2007-10-26 19:41:29 PDT
See test case.
Attachments
Test case
(370 bytes, text/html)
2007-10-26 19:41 PDT
,
mitz
no flags
Details
Move updating of transform to after the old repaint but before the new repaint (instead of after both repaints).
(746 bytes, patch)
2007-10-26 19:46 PDT
,
Dave Hyatt
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-10-26 19:41:49 PDT
Created
attachment 16894
[details]
Test case
Dave Hyatt
Comment 2
2007-10-26 19:46:48 PDT
Created
attachment 16895
[details]
Move updating of transform to after the old repaint but before the new repaint (instead of after both repaints).
mitz
Comment 3
2007-10-26 19:51:12 PDT
Comment on
attachment 16895
[details]
Move updating of transform to after the old repaint but before the new repaint (instead of after both repaints). r=me if you land a repaint test
Dave Hyatt
Comment 4
2007-10-26 20:01:54 PDT
Fixed in
r27138
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug