        Fix for http://bugs.webkit.org/show_bug.cgi?id=15719, transformed box doesn't repaint properly         when only translation changes.

Move the updating of the transform to in between the old repaint and the new repaint.

        Reviewed by mitz

        fast/repaint/transform-translate.html

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::updateLayerPositions):



Canonical link: https://commits.webkit.org/21059@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27138 268f45cc-cd09-0410-ab3c-d52691b4dbfc