WebCore/rendering/RenderLayer.cpp
@@ -189,7 +189,9 @@ void RenderLayer::updateLayerPositions(bool doFullRepaint, bool checkForRepaint)
     positionOverflowControls();
 
     updateVisibilityStatus();
-        
+
+    updateTransform();
+     
     if (m_hasVisibleContent) {
         RenderView* view = m_object->view();
         ASSERT(view);
@@ -224,8 +226,6 @@ void RenderLayer::updateLayerPositions(bool doFullRepaint, bool checkForRepaint)
     // With all our children positioned, now update our marquee if we need to.
     if (m_marquee)
         m_marquee->updateMarqueePosition();
-        
-    updateTransform();
 }
 
 void RenderLayer::updateTransform()
